Added BEM classes to HTML tags

--- a/app/assets/stylesheets/blogit/blocks/_comments.sass
+++ b/app/assets/stylesheets/blogit/blocks/_comments.sass
@@ -1,27 +1,7 @@
-#new_blog_comment
-  width: 600px
-  margin: 0 auto
-
-#new_blog_comment .hidden 
-  display: none
+.blogit_comment
   
-.blog_comment
-  width: 600px
-  margin: 1em auto
-  padding: 0 0 1em
-  border-bottom: thin solid silver
+.blogit_comment__name
 
-.blog_comment .actions, .blog_post .actions
-  text-align: right
+.blogit_comment__body
 
-#blog_share_bar
-  width: 600px
-  margin: 0.5em auto
-
-.social_button
-  display: inline-block
-
-label[for="comment_nickname"]
-  display: none
-#comment_nickname
-  display: none
+.blogit_comment__created_at
