--- a/app/views/blogit/posts/index.html.erb
+++ b/app/views/blogit/posts/index.html.erb
@@ -1,22 +1,22 @@
 <% if params[:tag] %>
-  <h2>
+  <h2 class="blogit_header--page">
     <%= t(:showing_posts_tagged_with, scope: "blogit.posts", tag: params[:tag])  %>
   </h2>
 <% end %>
 
-<% if @posts.any? %>
+<div class="blogit_posts_list">
+  <% if @posts.any? %>
+    <%= render partial: "blogit/posts/post",
+      collection: @posts,
+      spacer_template: "blog_post_spacer",
+      locals: { 
+        show_comments_count: (Blogit.configuration.include_comments == :active_records) 
+      }  %>
+  <% else %>
 
-  <%= render partial: "blogit/posts/post",
-    collection: @posts,
-    spacer_template: "blog_post_spacer",
-    locals: { 
-      show_comments_count: (Blogit.configuration.include_comments == :active_records) 
-    }  %>
-    
-<% else %>
+    <%= render partial: "blogit/posts/empty" %>
 
-  <%= render partial: "blogit/posts/empty" %>
-
-<% end %>
+  <% end %>
+</div>
 
 <%= render "pagination" %>
