--- a/app/views/blogit/comments/_active_record_comments.html.erb
+++ b/app/views/blogit/comments/_active_record_comments.html.erb
@@ -1,4 +1,4 @@
-<div id="comments">
+<div class="blogit_comments_list">
   <%= render post.comments %>
 </div>
 <%= render partial: "blogit/comments/form", locals: { post: post, comment: comment } %>
