--- a/app/views/blogit/comments/create.js.erb
+++ b/app/views/blogit/comments/create.js.erb
@@ -1,6 +1,6 @@
-var $form = $("form#new_blog_comment");
+var $form = $("form.blogit_form");
 <% if @comment.save %>
-  $("#comments").append("<%= escape_javascript(render(@comment)) %>");
+  $(".blogit_comments_list").append("<%= escape_javascript(render(@comment)) %>");
   $form.get(0).reset();
 <% else %>
   $form.html("<%= escape_javascript(render(partial:'form', locals: { post: @comment.post, comment: @comment })) %>");
