--- a/app/views/blogit/posts/_share_bar.html.erb
+++ b/app/views/blogit/posts/_share_bar.html.erb
@@ -1,6 +1,6 @@
-<div id="share_bar">
+<div id="blogit_share_bar">
 
-  <div class="share_bar-social_button is_google_plus">
+  <div class="blogit_share_bar__social_button blogit_share_bar__social_button--google_plus">
     <!-- GOOGLE +1 -->
     <g:plusone size="medium"></g:plusone>
     <script type="text/javascript">
@@ -15,8 +15,7 @@
     <!-- /GOOGLE +1 -->
   </div>
 
-  <div class="share_bar-social_button is_twitter">
-    <!-- TWITTER -->
+  <div class="blogit_share_bar__social_button blogit_share_bar__social_button--twitter">    <!-- TWITTER -->
     <a href="https://twitter.com/share" class="twitter-share-button"
         data-lang="<%= I18n.default_locale %>"
         data-url="http://<%= request.host_with_port %><%= request.path.gsub("//","/") %>"
@@ -28,7 +27,7 @@
     <!-- /TWITTER -->
   </div>
 
-  <div class="share_bar-social_button is_facebook">
+  <div class="blogit_share_bar__social_button blogit_share_bar__social_button--facebook"> 
     <!-- FACEBOOK LIKE -->
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
