--- a/app/views/blogit/posts/show.html.erb
+++ b/app/views/blogit/posts/show.html.erb
@@ -1,7 +1,7 @@
 <% title @post.title %>
 <% description @post.description.to_s %>
 
-<%= content_tag(:article, id: "blog_post_#{@post.id}", class: "blog_post") do %>
+<%= content_tag(:article, id: "blogit_post_#{@post.id}", class: "blogit_post") do %>
 
   <%# Render the header for this blog post %>
   <%= render "blogit/posts/post_head", post: @post %>
