Added header to comments and moved blogger info

--- a/app/views/blogit/comments/_active_record_comments.html.erb
+++ b/app/views/blogit/comments/_active_record_comments.html.erb
@@ -1,4 +1,5 @@
 <div class="blogit_comments_list">
+  <h3 class="blogit_comments_list__header blogit_header--section">Comments</h3>
   <%= render post.comments %>
 </div>
 <%= render partial: "blogit/comments/form", locals: { post: post, comment: comment } %>
