--- a/app/assets/stylesheets/blogit/themes/default/blocks/_posts.sass
+++ b/app/assets/stylesheets/blogit/themes/default/blocks/_posts.sass
@@ -1,7 +1,8 @@
 .blogit_post
 
-.blog_post--is_preview  
+.blog_post--is_preview
 
 .blogit_post__header
+  font-size: $font-size-xl
 
 .blogit_post__header_link
