Improved rake task for CSS compilation

--- a/app/assets/stylesheets/blogit/themes/default.css
+++ b/app/assets/stylesheets/blogit/themes/default.css
@@ -1,26 +1,4 @@
-.blogit_archive__list {
-  padding: 0;
-  list-style-type: none; }
-
-.blogit_archive__list--months {
-  padding-left: 0.5em;
-  display: none; }
-
-.blogit_archive__list--archiveables {
-  margin-bottom: 0.5em;
-  padding-left: 0.5em;
-  display: none; }
-
-.blogit_archive__item--post {
-  margin: 0.5em 0; }
-
-.blogit_header--page {
-  font-size: 2em; }
-
-.blogit_post__header {
-  font-size: 2em; }
-
-.blog_tags-li {
-  display: inline; }
+/* No files to import found in base/* */
+/* No files to import found in blocks/* */
 
 /*# sourceMappingURL=default.css.map */
