--- a/app/views/blogit/posts/_post.html.erb
+++ b/app/views/blogit/posts/_post.html.erb
@@ -7,7 +7,7 @@
   <%= render "blogit/posts/blogger_information", post: post %>
   
   <%# Render the body of this blog post (as Markdown) %>
-  <%= format_content(blogit_conf.show_post_description ? post.description : post.body) %>
+  <%= format_content(post.short_body) %>
 
   <%# Render the no. of comments %>
   <%= render "blogit/posts/comments_count",
