--- a/app/views/blogit/posts/index.html.erb
+++ b/app/views/blogit/posts/index.html.erb
@@ -8,10 +8,8 @@
   <% if @posts.any? %>
     <%= render partial: "blogit/posts/post",
       collection: @posts,
-      spacer_template: "blog_post_spacer",
-      locals: { 
-        show_comments_count: (Blogit.configuration.include_comments == :active_records) 
-      }  %>
+      spacer_template: "blog_post_spacer"
+    %>
   <% else %>
 
     <%= render partial: "blogit/posts/empty" %>
