--- a/app/views/blogit/posts/show.html.erb
+++ b/app/views/blogit/posts/show.html.erb
@@ -3,7 +3,7 @@
 
 <%= content_tag(:article, id: "blogit_post_#{@post.id}", class: "blogit_post") do %>
 
-  
+
   <%# Render the header for this blog post %>
   <%= render "blogit/posts/post_head", post: @post %>
 
@@ -16,8 +16,7 @@
   <%= share_bar_for_post @post %>
 
   <%# Render the no. of comments %>
-  <%= render "blogit/posts/comments_count",
-    post: post if defined?(show_comments_count) and show_comments_count %>
+  <%= render "blogit/comments/comments_count", post: @post if show_comments_count? %>
 
   <%= render "blogit/posts/tags", post: @post %>
   <%= render "blogit/posts/related", post: @post %>
